--- a/readme.Rmd
+++ b/readme.Rmd
@@ -73,7 +73,7 @@ make_stan_dat(depth = MSB2K$depth,
   obs_age = MSB2K$age, 
   obs_err = MSB2K$error,
   K = K_for_5cm, nu = 6,
-  acc_mean = 20, acc_var = "default",
+  acc_mean = 20, acc_alpha = 1.5,
   mem_mean = 0.7, mem_strength = 4)
 
 ```
@@ -87,7 +87,7 @@ fit <- stan_bacon(
   obs_age = MSB2K$age, 
   obs_err = MSB2K$error,
   K = K_for_5cm, nu = 6,
-  acc_mean = 20, acc_var = "default",
+  acc_mean = 20, acc_alpha = 1.5,
   mem_mean = 0.7, mem_strength = 4,
   iter = 2000, chains = 4)
 ```
@@ -116,7 +116,7 @@ fit2 <- stan_bacon(
   obs_age = MSB2K$age, 
   obs_err = MSB2K$error,
   K = K_for_5cm*10, nu = 6,
-  acc_mean = 20, acc_var = 2000,
+  acc_mean = 20, acc_alpha = 0.2,
   mem_mean = 0.7, mem_strength = 4,
   iter = 2000, chains = 4)
 ```
