--- a/readme.Rmd
+++ b/readme.Rmd
@@ -40,9 +40,7 @@ if (!require("devtools")) {
   install.packages("devtools")
 }
 
-devtools::install_github("andrewdolman/baconr")
-
-opts_chunk$set(cache = TRUE, autodep = TRUE)
+devtools::install_github("andrewdolman/baconr", args = "--preclean", build_vignettes = FALSE)
 ```
 
 
