--- a/readme.Rmd
+++ b/readme.Rmd
@@ -3,6 +3,8 @@ title: "baconr: An rstan implementation of the Bayesian Age-Depth model *Bacon* 
 output: 
   html_document: 
     keep_md: yes
+editor_options: 
+  chunk_output_type: console
 ---
 
 -------------------------------
