--- a/vignettes/hamstr.Rmd
+++ b/vignettes/hamstr.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "adam"
+title: "hamstr"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{adam}
+  %\VignetteIndexEntry{hamstr}
   %\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
 editor_options: 
@@ -17,9 +17,8 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup}
-library(baconr)
+library(hamstr)
 library(tidyverse)
-
 
 set.seed(20200827)
 ```
@@ -43,35 +42,43 @@ if (parallel::detectCores() >= 3) options(mc.cores = 3)
 ```
 
 ```{r}
-adam_fit_1 <- adam(depth = MSB2K_cal$depth,
+hamstr_fit_1 <- hamstr(depth = MSB2K_cal$depth,
                    obs_age = MSB2K_cal$age.14C.cal,
                    obs_err = MSB2K_cal$age.14C.cal.se,
+                   shape = 1,
+                  
                    K = c(10, 10))
+
+hamstr_fit_1b <- hamstr(depth = MSB2K_cal$depth,
+                   obs_age = MSB2K_cal$age.14C.cal,
+                   obs_err = MSB2K_cal$age.14C.cal.se,
+                   shape = 1,
+                   K = c(100))
 ```
 
 
 ### Default plot
 
 ```{r}
-plot_adam(adam_fit_1)
+plot_hamstr(hamstr_fit_1)
 ```
 
 ### Plot "spaghetti" instead of shaded regions
 
 ```{r}
-plot_adam(adam_fit_1, type = "spag")
+plot_hamstr(hamstr_fit_1, type = "spag")
 ```
 
 ### Prior and posterior of overall mean accumulation rate
 
 ```{r}
-plot_acc_mean_prior_posterior(adam_fit_1)
+plot_acc_mean_prior_posterior(hamstr_fit_1)
 ```
 
 ### Plot modelled accumulation rates at each hierarchical level
 
 ```{r}
-plot_hierarchical_acc_rate(adam_fit_1)
+plot_hierarchical_acc_rate(hamstr_fit_1)
 ```
 
 
@@ -80,7 +87,7 @@ plot_hierarchical_acc_rate(adam_fit_1)
 As for this example the highest resolution sections are approximately 1 cm thick, there is not much difference between R and w. 
 
 ```{r}
-plot_memory_prior_posterior(adam_fit_1)
+plot_memory_prior_posterior(hamstr_fit_1)
 ```
 
 
@@ -100,14 +107,14 @@ compare_14C_PDF(MSB2K$age[i], MSB2K$error[i])
 
 
 ```{r}
-adam_fit_2 <- adam(depth = MSB2K_cal$depth,
+hamstr_fit_2 <- hamstr(depth = MSB2K_cal$depth,
                    obs_age = MSB2K_cal$age.14C.cal,
                    obs_err = MSB2K_cal$age.14C.cal.se,
                    K = c(4, 5))
 ```
 
 ```{r}
-plot_adam(adam_fit_2)
+plot_hamstr(hamstr_fit_2)
 ```
 
 ```{r}
@@ -118,18 +125,18 @@ plot_adam(adam_fit_2)
 ## Refit with 21 non-hierarchical sections
 
 ```{r}
-adam_fit_3 <- adam(depth = MSB2K_cal$depth,
+hamstr_fit_3 <- hamstr(depth = MSB2K_cal$depth,
                    obs_age = MSB2K_cal$age.14C.cal,
                    obs_err = MSB2K_cal$age.14C.cal.se,
                    K = c(21))
 ```
 
 ```{r}
-plot_adam(adam_fit_3)
+plot_hamstr(hamstr_fit_3)
 ```
 
 ```{r}
-plot_adam(adam_fit_3, type = "spag")
+plot_hamstr(hamstr_fit_3, type = "spag")
 ```
 
 
@@ -137,7 +144,7 @@ plot_adam(adam_fit_3, type = "spag")
 ## Refit with maximum hierarchical structure
 
 ```{r}
-adam_fit_4 <- adam(depth = MSB2K_cal$depth,
+hamstr_fit_4 <- hamstr(depth = MSB2K_cal$depth,
                    obs_age = MSB2K_cal$age.14C.cal,
                    obs_err = MSB2K_cal$age.14C.cal.se,
                    K = c(10, 10),
@@ -146,18 +153,18 @@ adam_fit_4 <- adam(depth = MSB2K_cal$depth,
 ```
 
 ```{r}
-plot_adam(adam_fit_4)
+plot_hamstr(hamstr_fit_4)
 
-plot_acc_mean_prior_posterior(adam_fit_4)
+plot_acc_mean_prior_posterior(hamstr_fit_4)
 ```
 
 ```{r}
-plot_adam(adam_fit_4, type = "spag")
+plot_hamstr(hamstr_fit_4, type = "spag")
 ```
 
 
 ```{r}
-adam_fit_5 <- adam(depth = MSB2K_cal$depth,
+hamstr_fit_5 <- hamstr(depth = MSB2K_cal$depth,
                    obs_age = MSB2K_cal$age.14C.cal,
                    obs_err = MSB2K_cal$age.14C.cal.se,
                    K = c(10, 10),
@@ -166,14 +173,14 @@ adam_fit_5 <- adam(depth = MSB2K_cal$depth,
                    inflate_errors = TRUE,
                    infl_shape_shape = 3, infl_shape_mean = 5)
 
-plot_adam(adam_fit_5)
+plot_hamstr(hamstr_fit_5)
 
-print(adam_fit_5$fit, pars = c("infl", "infl_mean", "infl_shape", "infl_shape_1"))
+print(hamstr_fit_5$fit, pars = c("infl", "infl_mean", "infl_shape", "infl_shape_1"))
 
-traceplot(adam_fit_5$fit, pars = c("infl_mean", "infl_shape"), inc_warmup = T)
+traceplot(hamstr_fit_5$fit, pars = c("infl_mean", "infl_shape"), inc_warmup = T)
 
 library(rstan)
-plot_infl_prior_posterior(adam_fit_5)
+plot_infl_prior_posterior(hamstr_fit_5)
 ```
 
 
